--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,7 +2,7 @@
 @font-face {
   font-family: 'PressStart2P';
   src: url(./PressStart2P-Regular.woff) format('woff');
-  font-weight: normal;
+  font-weight: 400;
   font-display: swap;
 }
 
@@ -10,9 +10,8 @@
   font-family: 'Inter';
   src:
     local('Inter'),
-    url(./Inter-Variable.woff2)
-    format('woff2 supports variations'),
-    url('../fonts/Inter-Variable.woff2') 
-    format('woff2-variations');
+    url(./Inter-Variable.woff2) format('woff2 supports variations'),
+    url(./Inter-Variable.woff2) format('woff2-variations');
   font-display: swap;
+  font-weight: 400 785;
 }
