--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,31 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+:root.theme-light {
+  --main-font: 'Inter';
+  --accent-font: 'PressStart2P';
+  --text-font-weight: 400;
+  --title-font-wight: 700;
+  --bg-color: #FFF;
+  --accent-color: #000;
+}
+
+:root.theme-dark {
+  --main-font: 'Inter';
+  --accent-font: 'PressStart2P';
+  --text-font-weight: 465;
+  --title-font-wight: 785;
+  --bg-color: #000;
+  --accent-color: #00CC14;
+}
+
+@media (prefers-color-scheme: dark) {
+  :root.theme-dark {
+  --main-font: 'Inter';
+  --accent-font: 'PressStart2P';
+  --text-font-weight: 465;
+  --title-font-wight: 785;
+  --bg-color: #000;
+  --accent-color: #00CC14;
+  }
+}
