--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,1 +1,9 @@
 /* В этом файле будут храниться все значения переменных в исходном состоянии, а так же их изменения в зависимости от ширины устройства */
+:root {
+  --main-font: 'Inter';
+  --accent-font: 'PressStart2P';
+  --text-font-weight: 400;
+  --title-font-wight: 700;
+  --bg-color: #FFF;
+  --accent-color: #000;
+}
