--- a/styles/style.css
+++ b/styles/style.css
@@ -15,17 +15,384 @@
 */
 
 .page {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-family: var(--main-font, sans-serif);
-  font-variation-settings: 'wgth' var(--text-font-weight-light);
+  font-family: var(--main-font), sans-serif;
+  font-variation-settings: "wgth" var(--text-font-weight);
   background-color: var(--bg-color);
   color: var(--accent-color);
+  background-image: var(--bg-image);
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 100px 0;
 }
 
 @supports (font-variation-settings: normal) {
   .page {
-      font-family: 'Roboto-Flex-Variable', sans-serif;
+    font-family: "Inter", sans-serif;
   }
 }
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+  padding-block-end: 50px;
+}
+
+.wrapper {
+  max-inline-size: 700px;
+  margin: 0 auto;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  inline-size: 100%;
+  position: relative;
+  background-color: var(--bg-color);
+  border: 2px solid var(--border-color);
+  padding-block-start: clamp(7.5rem, 7.148rem + 1.502vw, 8.5rem);
+  padding-inline: clamp(0.875rem, -1.469rem + 10vw, 7.531rem);
+  font-family: var(--accent-font);
+  padding-block-end: 25px;
+  font-weight: var(--text-font-weight);
+  text-transform: uppercase;
+  inline-size: clamp(23.438rem, 16.285rem + 30.516vw, 43.75rem);
+  margin-block-end: 100px;
+}
+
+.header__title {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.logo {
+  font-size: clamp(3.063rem, 2.71rem + 1.502vw, 4.063rem);
+}
+
+.title {
+  font-size: clamp(0.875rem, 0.677rem + 0.845vw, 1.438rem);
+}
+
+.theme-menu__list {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  gap: 14px;
+}
+
+.theme-menu__button {
+  background-color: transparent;
+  border: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  cursor: pointer;
+  position: relative;
+}
+
+.theme-menu__button:hover {
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button:disabled {
+  pointer-events: none;
+  position: relative;
+  opacity: 0.6;
+  transition: opacity 0.3s ease;
+}
+
+.theme-menu__button:disabled::before {
+  content: "▶";
+  display: inline-block;
+  inline-size: 14px;
+  block-size: 14px;
+  margin-inline-start: -20px;
+  position: absolute;
+  animation: pointer 0.5s ease-in-out infinite alternate;
+}
+
+@keyframes pointer {
+  from {
+    margin-inline-start: -20px;
+  }
+
+  to {
+    margin-inline-start: -16px;
+  }
+}
+
+.theme-menu__button:focus {
+  outline: none;
+  opacity: 0.6;
+}
+
+.theme-menu__button::after {
+  content: "";
+  display: block;
+  transform: scaleX(0);
+  background: #000;
+  height: 2px;
+  transition: none;
+}
+
+.theme-menu__button:focus-visible::after {
+  transform: scaleX(1);
+  transform-origin: left;
+  opacity: 0.6;
+  transition: transform 0.3s;
+}
+
+.card__list {
+  inline-size: clamp(23.438rem, 16.285rem + 30.516vw, 43.75rem);
+  max-inline-size: 699px;
+  border: 2px solid var(--border-color);
+  background-color: var(--bg-color);
+}
+
+.card__list-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card__image {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+}
+
+.image__item {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
+
+.watermark {
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  mix-blend-mode: hard-light;
+  font-size: 14px;
+  font-family: var(--accent-font);
+  color: var(--accent-color);
+  opacity: 0.5;
+  font-weight: var(--text-font-weight);
+  text-shadow: -1px 0 var(--border-watermark), 0 1px var(--border-watermark),
+    1px 0 var(--border-watermark), 0 -1px var(--border-watermark);
+  text-transform: lowercase;
+  line-height: 14px;
+}
+
+.watermark__sprint {
+  text-transform: uppercase;
+}
+
+@supports ((text-stroke: 1px var(--border-watermark))) or
+  (-webkit-text-stroke: 1px var(--border-watermark)) {
+  .watermark {
+    -webkit-text-stroke: 1px var(--border-watermark);
+    text-stroke: 1px var(--border-watermark);
+    text-shadow: none;
+  }
+}
+
+.card__list-title {
+  font-size: var(--card-text-font);
+  font-weight: var(--title-font-weight);
+  align-self: flex-start;
+  line-height: 21.78px;
+  padding-block-start: clamp(0.188rem, 0.165rem + 0.094vw, 0.25rem);
+  padding-block-end: clamp(0.188rem, 0.121rem + 0.282vw, 0.375rem);
+  padding-inline-start: 10px;
+  inline-size: 100%;
+  border-bottom: 2px solid var(--accent-color);
+}
+
+.text {
+  padding-block: 25px;
+  padding-inline: 25px;
+  width: 100%;
+  border-top: 2px solid var(--accent-color);
+}
+
+.card__text {
+  font-size: var(--card-text-font);
+  font-weight: var(--text-font-weight);
+  align-self: flex-start;
+  line-height: 21.78px;
+  font-family: var(--main-font);
+}
+
+p:nth-child(1) {
+  padding-block-end: 27px;
+}
+
+.card__buttons {
+  display: flex;
+  align-self: flex-end;
+  padding: 0 25px 25px 0;
+  gap: 3px;
+}
+
+.button {
+  border: 2px solid var(--border-color);
+  cursor: pointer;
+  background-color: transparent;
+  position: relative;
+  overflow: hidden;
+}
+
+.card__like-button {
+  width: 130px;
+  height: 38px;
+}
+
+.button::before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: #000;
+  position: absolute;
+  transform: translateX(-100%);
+  top: 0;
+  left: 0;
+  transition: 0.5s ease-in-out;
+  transform-origin: left;
+}
+
+.button:hover::before {
+  transform: translateX(0);
+}
+
+.button__text {
+  font-family: var(--accent-font);
+  font-weight: var(--text-font-weight);
+  font-size: 14px;
+  line-height: 12.6px;
+  text-align: center;
+  color: var(--button-text-color);
+  mix-blend-mode: difference;
+  position: relative;
+}
+
+.button:focus {
+  outline: none;
+  box-shadow: 2px 2px 0 var(--accent-color);
+  transition: box-shadow 0.3s;
+}
+
+.button__save {
+  background-color: var(--background-floppy);
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  padding: 15px 18px;
+}
+
+.button-floppy {
+  mix-blend-mode: difference;
+  color: var(--floppy-color);
+}
+
+.button__save-floppy {
+  inline-size: 21px;
+  block-size: 21px;
+}
+
+.button__modal-floppy {
+  inline-size: 39px;
+  block-size: 39px;
+}
+
+.card__icon-button {
+  background-color: transparent;
+  border: 2px solid transparent;
+  height: 38px;
+  display: flex;
+  align-items: center;
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: var(--border-color);
+  transition: border-color 0.3s;
+}
+
+.like-icon {
+  cursor: pointer;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.dialog[open] {
+  max-inline-size: 353px;
+  min-inline-size: 341px;
+  padding: 30px;
+  position: fixed;
+  top: 50vh;
+  background-color: var(--background-dialog);
+  border: 2px solid var(--border-color);
+}
+
+.dialog::backdrop {
+  background-color: #000;
+  opacity: 0.75;
+}
+
+.modal__wrapper {
+  display: grid;
+  gap: 30px;
+}
+
+.modal__form {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  align-items: center;
+  max-inline-size: 293px;
+  min-inline-size: 257px;
+  gap: 20px;
+}
+
+.modal__text {
+  font-family: var(--accent-font);
+  font-weight: var(--text-font-weight);
+  font-size: 14px;
+  line-height: 21px;
+  color: var(--accent-color);
+}
+
+
+.close-dialog {
+  display: grid;
+  height: 38px;
+}
+
+.close-button {
+  background-color: transparent;
+  text-transform: uppercase;
+  border: 2px solid var(--border-color);
+  line-height: 12.6px;
+  font-family: var(--accent-font);
+  font-weight: var(--text-font-weight);
+  color: var(--accent-color);
+}
+
 
