--- a/styles/animations.css
+++ b/styles/animations.css
@@ -13,6 +13,29 @@
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 */
 
+@keyframes pointer {
+  from {
+    margin-inline-start: -20px;
+  }
+
+  to {
+    margin-inline-start: -16px;
+  }
+}
+
+.card__icon-button:focus {
+  outline: none;
+}
+
+.card__icon-button:focus-visible {
+  border-color: var(--border-color);
+  transition: border-color 0.3s;
+}
+
+.sparks {
+  opacity: 0;
+}
+
 .like-icon .core {
   fill: transparent;
   transition: fill 0.3s 0.03s linear;
@@ -80,7 +103,6 @@
   to {
     scale: 1.5;
   }
-
 }
 
 @keyframes sparks {
