--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,16 +5,28 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 :root.theme-light {
-  --main-font: 'Inter';
-  --accent-font: 'PressStart2P';
+  --main-font: "Inter";
+  --accent-font: "PressStart2P";
   --text-font-weight: 400;
+  --watermark-fontweight: 400;
   --title-font-wight: 700;
-  --bg-color: #FFF;
+  --bg-color: #fff;
   --accent-color: #000;
-  --bg-image: 
-  repeating-linear-gradient(to right, #d3d3d3, #d3d3d3 2px, transparent 2px, transparent 4px),
-  repeating-linear-gradient(to bottom, #e7e7e7, #e7e7e7 2px, #1a1a1a 2px, #1a1a1a 4px),
-  linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+  --bg-image: repeating-linear-gradient(
+      90deg,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      to bottom,
+      #d3d3d3,
+      #d3d3d3 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
   --card-text-font: 18px;
   --border-color: #000;
   --border-watermark: #fff;
@@ -22,55 +34,118 @@
   --button-text-color: #fff;
   --floppy-color: #fff;
   --contour-color: #000;
-  --fill-color: #FF0000;
+  --fill-color: #ff0000;
   --background-floppy: #fff;
   --background-dialog: #fff;
+  --button-hover-color: #000;
+}
+
+@media (prefers-color-scheme: light) {
+  :root.theme-light {
+    --main-font: "Inter";
+    --accent-font: "PressStart2P";
+    --text-font-weight: 400;
+    --watermark-fontweight: 400;
+    --title-font-wight: 700;
+    --bg-color: #fff;
+    --accent-color: #000;
+    --bg-image: repeating-linear-gradient(
+        90deg,
+        #d3d3d3,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      repeating-linear-gradient(
+        to bottom,
+        #d3d3d3,
+        #d3d3d3 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      linear-gradient(to bottom, #e7e7e7 0.01%, #1a1a1a);
+    --card-text-font: 18px;
+    --border-color: #000;
+    --border-watermark: #fff;
+    --button-background: #fff;
+    --button-text-color: #fff;
+    --floppy-color: #fff;
+    --contour-color: #000;
+    --fill-color: #ff0000;
+    --background-floppy: #fff;
+    --background-dialog: #fff;
+    --button-hover-color: #000;
+  }
 }
 
 :root.theme-dark {
-  --main-font: 'Inter';
-  --accent-font: 'PressStart2P';
+  --main-font: "Inter";
+  --accent-font: "PressStart2P";
   --text-font-weight: 465;
-  --title-font-wight: 785;
+  --title-font-weight: 785;
+  --watermark-fontweight: 400;
   --bg-color: #000;
-  --accent-color: #00CC14;
-  --bg-image: 
-  repeating-linear-gradient(to right, #000, #000 2px, transparent 2px, transparent 4px),
-  repeating-linear-gradient(to bottom, #007f0c, #007f0c 2px, #004306 2px, #004306 4px),
-  linear-gradient(to bottom, #007f0c 0.01%, #004306);
+  --accent-color: #00cc14;
+  --bg-image: repeating-linear-gradient(
+      90deg,
+      #000,
+      #000 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    repeating-linear-gradient(
+      to bottom,
+      #000,
+      #000 2px,
+      transparent 2px,
+      transparent 4px
+    ),
+    linear-gradient(to bottom, #007f0c 0.01%, #004306);
   --card-text-font: 18px;
-  --border-color: #00CC14;
-  --border-watermark: #fff;
-  --button-background: #fff;
-  --button-text-color: #00CC14;
-  --floppy-color: #00CC14;
-  --contour-color: #00CC14;
-  --fill-color: #00CC14;
+  --border-color: #00cc14;
+  --border-watermark: #000;
+  --button-text-color: #00cc14;
+  --floppy-color: #00cc14;
+  --contour-color: #00cc14;
+  --fill-color: #00cc14;
   --background-floppy: #000;
   --background-dialog: #000;
+  --button-hover-color: #00cc14;
 }
 
 @media (prefers-color-scheme: dark) {
   :root.theme-dark {
-  --main-font: 'Inter';
-  --accent-font: 'PressStart2P';
-  --text-font-weight: 465;
-  --title-font-wight: 785;
-  --bg-color: #000;
-  --accent-color: #00CC14;
-  --bg-image: 
-  repeating-linear-gradient(to right, #000, #000 2px, transparent 2px, transparent 4px),
-  repeating-linear-gradient(to bottom, #007f0c, #007f0c 2px, #004306 2px, #004306 4px),
-  linear-gradient(to bottom, #007f0c 0.01%, #004306);
-  --card-text-font: 18px;
-  --border-color: #00CC14;
-  --border-watermark: #fff;
-  --button-background: #fff;
-  --button-text-color: #00CC14;
-  --floppy-color: #00CC14;
-  --contour-color: #00CC14;
-  --fill-color: #00CC14;
-  --background-floppy: #000;
-  --background-dialog: #000;
+    --main-font: "Inter";
+    --accent-font: "PressStart2P";
+    --text-font-weight: 465;
+    --watermark-fontweight: 400;
+    --title-font-weight: 785;
+    --bg-color: #000;
+    --accent-color: #00cc14;
+    --bg-image: repeating-linear-gradient(
+        90deg,
+        #000,
+        #000 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      repeating-linear-gradient(
+        to bottom,
+        #000,
+        #000 2px,
+        transparent 2px,
+        transparent 4px
+      ),
+      linear-gradient(to bottom, #007f0c 0.01%, #004306);
+    --card-text-font: 18px;
+    --border-color: #00cc14;
+    --border-watermark: #000;
+    --button-text-color: #00cc14;
+    --floppy-color: #00cc14;
+    --contour-color: #00cc14;
+    --fill-color: #00cc14;
+    --background-floppy: #000;
+    --background-dialog: #000;
+    --button-hover-color: #00cc14;
   }
 }
