--- a/styles/style.css
+++ b/styles/style.css
@@ -37,10 +37,10 @@
   }
 }
 
-.wrapper {
+/*.wrapper {
   max-inline-size: 700px;
   margin: 0 auto;
-}
+}*/
 
 .header {
   display: flex;
@@ -57,7 +57,7 @@
   padding-block-end: 25px;
   font-weight: var(--text-font-weight);
   text-transform: uppercase;
-  inline-size: clamp(23.438rem, 16.285rem + 30.516vw, 43.75rem);
+  /*inline-size: clamp(23.438rem, 16.285rem + 30.516vw, 43.75rem);*/
   margin-block-end: 100px;
 }
 
@@ -148,7 +148,7 @@
 
 .card__list {
   inline-size: clamp(23.438rem, 16.285rem + 30.516vw, 43.75rem);
-  max-inline-size: 699px;
+  max-inline-size: 700px;
   border: 2px solid var(--border-color);
   background-color: var(--bg-color);
 }
