--- a/styles/style.css
+++ b/styles/style.css
@@ -37,10 +37,10 @@
   }
 }
 
-/*.wrapper {
-  max-inline-size: 700px;
+.wrapper {
+  max-inline-size: 699px;
   margin: 0 auto;
-}*/
+}
 
 .header {
   display: flex;
@@ -59,6 +59,7 @@
   text-transform: uppercase;
   /*inline-size: clamp(23.438rem, 16.285rem + 30.516vw, 43.75rem);*/
   margin-block-end: 100px;
+  inline-size: 100%;
 }
 
 .header__title {
@@ -110,10 +111,6 @@
 
 .theme-menu__button:disabled::before {
   content: "▶";
-  display: inline-block;
-  inline-size: 14px;
-  block-size: 14px;
-  margin-inline-start: -20px;
   position: absolute;
   animation: pointer 0.5s ease-in-out infinite alternate;
 }
@@ -147,8 +144,7 @@
 }
 
 .card__list {
-  inline-size: clamp(23.438rem, 16.285rem + 30.516vw, 43.75rem);
-  max-inline-size: 700px;
+  /*inline-size: clamp(23.438rem, 16.285rem + 30.516vw, 43.75rem);*/
   border: 2px solid var(--border-color);
   background-color: var(--bg-color);
 }
