--- a/styles/themes.css
+++ b/styles/themes.css
@@ -5,8 +5,6 @@
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
 :root.theme-light {
-  --main-font: "Inter";
-  --accent-font: "PressStart2P";
   --text-font-weight: 400;
   --watermark-fontweight: 400;
   --title-font-wight: 700;
@@ -41,9 +39,7 @@
 }
 
 @media (prefers-color-scheme: light) {
-  :root.theme-light {
-    --main-font: "Inter";
-    --accent-font: "PressStart2P";
+  :root {
     --text-font-weight: 400;
     --watermark-fontweight: 400;
     --title-font-wight: 700;
@@ -79,8 +75,6 @@
 }
 
 :root.theme-dark {
-  --main-font: "Inter";
-  --accent-font: "PressStart2P";
   --text-font-weight: 465;
   --title-font-weight: 785;
   --watermark-fontweight: 400;
@@ -114,9 +108,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-  :root.theme-dark {
-    --main-font: "Inter";
-    --accent-font: "PressStart2P";
+  :root {
     --text-font-weight: 465;
     --watermark-fontweight: 400;
     --title-font-weight: 785;
