--- a/styles/style.css
+++ b/styles/style.css
@@ -109,6 +109,7 @@
   animation: pointer 0.5s ease-in-out infinite alternate;
   top: 1px;
   left: -14px;
+  padding-block-start: 1px;
 }
 
 .theme-menu__button:focus {
@@ -121,8 +122,8 @@
   display: block;
   transform: scaleX(0);
   background: var(--accent-color);
-  height: 2px;
-  width: 100%;
+  block-size: 2px;
+  inline-size: 100%;
   transition: transform 0.3s ease;
   transform-origin: left;
 }
@@ -233,7 +234,7 @@
 .text {
   padding-block: 25px;
   padding-inline: 25px;
-  width: 100%;
+  inline-size: 100%;
   border-top: 2px solid var(--accent-color);
 }
 
@@ -266,14 +267,14 @@ p:nth-child(1) {
 }
 
 .card__like-button {
-  width: 130px;
-  height: 38px;
+  inline-size: 130px;
+  block-size: 38px;
 }
 
 .button::before {
   content: "";
-  width: 100%;
-  height: 100%;
+  inline-size: 100%;
+  block-size: 100%;
   background: var(--button-hover-color);
   position: absolute;
   transform: translateX(-100%);
@@ -337,14 +338,11 @@ p:nth-child(1) {
 .card__icon-button {
   background-color: transparent;
   border: 2px solid transparent;
-  height: 38px;
+  block-size: 38px;
   display: flex;
   align-items: center;
   transition: border-color 0.3s ease;
-  padding-inline-end: 1px;
-}
-
-.like-icon {
+  padding: 0;
   cursor: pointer;
 }
 
@@ -431,9 +429,13 @@ p:nth-child(1) {
 }
 
 @media (max-width: 375px) {
+  .header__theme-menu {
+    padding-inline-start: 21px;
+  }
+
   .theme-menu__button:disabled::before {
-    padding-block-start: 1px;
-    padding-inline-start: 2px;
+    padding-block-start: 2px;
+    padding-inline-start: 3px;
   }
 
   .content {
